# inotify-tools

./: .clang-format  CMakeLists.txt
